correcao bug novo participante

--- a/templates/participante.novo.html
+++ b/templates/participante.novo.html
@@ -38,21 +38,11 @@
         //$("#telefoneComercial").mask("(99) 9999-9999");
 
         $(function() {
-            var cidades = [{
-                CIDADES
-            }];
-            var estados = [{
-                ESTADOS
-            }];
-            var paises = [{
-                PAISES
-            }];
-            var nomes = [{
-                NOMES
-            }];
-            var cpfs = [{
-                CPFS
-            }];
+            var cidades = [{CIDADES}];
+            var estados = [{ESTADOS}];
+            var paises = [{PAISES}];
+            var nomes = [{NOMES}];
+            var cpfs = [{CPFS}];
             $("#nome").autocomplete({
                 source: nomes
             });
