--- a/templates/tpl_shopping.html
+++ b/templates/tpl_shopping.html
@@ -44,7 +44,7 @@ String.prototype.replaceAll = String.prototype.replaceAll || function(needle, re
     <!-- Bootstrap core CSS -->
     <link href="plugins/bootstrap-4.5.0-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet">
-    
+    <link href="plugins/font-awesome/css/all.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <style>
         .container {
@@ -90,8 +90,8 @@ body {
        
     
         <li class="nav-item">
-          <a class="nav-link p-2" href="https://github.com/twbs/bootstrap" target="_blank" rel="noopener" aria-label="GitHub">
-          teste  
+          <a class="nav-link p-2" href="http://obrademariadf.com.br" target="_blank" rel="noopener" aria-label="GitHub">
+            <i style="font-size: 20px;" class="fas fa-phone"> </i> 61 3036-9108  
           </a>
         </li>
        
